bin_PROGRAMS = pfserver pfclient

pfserver_SOURCES = server_main.cpp FileDesc.cpp Server.cpp TCPServer.cpp TCPConn.cpp strfuncts.cpp DivFinderServer.cpp DataHelper.cpp ALMgr.cpp

pfclient_SOURCES = client_main.cpp Client.cpp FileDesc.cpp TCPClient.cpp strfuncts.cpp DivFinderServer.cpp DataHelper.cpp
pfclient_LDFLAGS = -pthread

